--- a/style.css
+++ b/style.css
@@ -2,35 +2,21 @@
   box-sizing: border-box;
 }
 
-p {
-  padding: 15px;
+a:hover {
+  color:rgb(96, 210, 255);
+}
+  
+a:visited {
+  color: purple;
 }
   
 body {
   background: linear-gradient(120deg, #9DDDFD, #8D4DD6);
   font-family: "gill sans", sans-serif;
 }
-  
-.attention {
-  color: white;
-  background-color: black;
-  padding: 5px;
-  text-align: center;
-  text-transform: uppercase;
-  width: 100%;
-}
-  
-.relaunch {
-  color: white;
-  background-color: black;
-  padding: 5px;
-  text-align: center;
-  margin: 0 auto;
-  top: 0;
-}
 
 header  {
-  background: beige;
+  background: white;
   position: fixed;
   top: 0;
   left: 0;
@@ -40,11 +26,28 @@ header  {
 
 }
 
+.relaunch {
+  color: white;
+  background-color: black;
+  padding: 5px;
+  text-align: center;
+  margin: 0 auto;
+  top: 0;
+}
+
 nav {
   text-align: center;
   margin: 0 auto;
   position: relative;
   right: 80px;
+}
+
+nav li {
+  position: relative;
+  bottom: 40px;
+  left: 20px;
+  display: inline;
+  padding: 10px 15px;
 }
 
 .logoMain {
@@ -60,59 +63,90 @@ nav {
   display: inline;
   overflow: hidden;
 }
-  
-nav li {
+
+.attention {
+  color: white;
+  background-color: black;
+  padding: 5px;
+  text-align: center;
+  text-transform: uppercase;
+  width: 100%;
+}
+
+main  {
+  margin: 0 0 250px 0;
+}
+
+.guideNew {
   position: relative;
-  bottom: 40px;
-  left: 20px;
-  display: inline;
-  padding: 10px 15px;
+  top: 260px;
+}
+
+
+.faq  {
+  position: relative;
+  top: 260px;
+  left: 320px;
+}
+
+table td  {
+  background: white;
+  border-radius: 5sssssspx;
+  padding: 10px 10px;
+  max-width: 900px;
+  text-align: justify;
+}
+
+.intro {
+  padding: 20px 0;
+  text-align: justify;
+  width: 900px;
+  margin: 0 auto;
+  position: relative;
+  top: 260px;
 }
 
 .basicInfo {
     padding: 20px 20px;
     position: relative;
-    left: 340px;
+    top: 250px;
+    left: 460px;
+    bottom: 400px;
     text-align: center;
     display: inline-block;
-    background: beige;
-    width: 400px;
-    height: 500px;
+    background: white;
+    border: 1px solid black;
+    border-radius: 40px;
+    width: 320px;
+    height: 400px;
     margin: 0 auto;
     overflow: hidden;
 }
+
 .basicInfo p {
- 
     text-align: justify;
+    font-size: 18 px;
+    overflow: hidden;
   }
-
-
-.intro {
-  text-align: justify;
-  width: 600px;
-  margin: 0 auto;
+ 
+footer  {
+  bottom: 0;
 }
-  
-a:hover {
-  color:rgb(96, 210, 255);
-}
-  
-a:visited {
-  color: purple;
-}
-  
+ 
 .footerLinks  {
+  background: white;
   border: 3px solid Black;
-  padding: 20px 0px;
-  position: relative;
-  bottom: 0px;
+  border-radius: 40px;
+  bottom: 0;
+  left: 480px;
   text-align: center;
-  width: 100%;
-  overflow: hidden;
+  margin: 20px auto;                                                                                                                          
+  width: 50%;
+  position: sticky;
+  z-index: 10;
+  display: inline-block;
 }
 
-.footerLinks a:hover  {
-  background: clear;
-  border: 2px solid black;
-  color: lightblue;
+.footerLinks a {
+  padding: 20px 60px;
 }
